change token key in localstorage

--- a/src/Backend/Nager.AuthenticationService.WebApi/wwwroot/index.html
+++ b/src/Backend/Nager.AuthenticationService.WebApi/wwwroot/index.html
@@ -1,8 +1,8 @@
 ﻿<html>
 <head>
-    <title>Nager.AuthenticationService</title>
+    <title>place holder</title>
 </head>
 <body>
-  add spa
+  replace by ci/cd build
 </body>
 </html>
