--- a/src/Backend/Nager.AuthenticationService.WebApi/wwwroot/index.html
+++ b/src/Backend/Nager.AuthenticationService.WebApi/wwwroot/index.html
@@ -1,8 +1,40 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>place holder</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Placeholder</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f5f5f5;
+            color: #555;
+        }
+
+        .message {
+            text-align: center;
+        }
+
+            .message h1 {
+                font-size: 2rem;
+                margin: 0 0 1rem;
+            }
+
+            .message p {
+                font-size: 1rem;
+                margin: 0;
+            }
+    </style>
 </head>
 <body>
-  replace by ci/cd build
+    <div class="message">
+        <h1>Placeholder</h1>
+        <p>This page will be replaced by the Vue frontend built by the CI/CD pipeline.</p>
+    </div>
 </body>
 </html>
